.Adding Code Snippet for JSON Input .Adding static variables .Adding/Correcting Validations